--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" />
-		<script src="js/jquery-1.9.1.min.js"></script>
-		<script src="js/config.js"></script>
-		<script src="js/skel.min.js"></script>
+		<script src="jquery-1.9.1.min.js"></script>
+		<script src="config.js"></script>
+		<script src="skel.min.js"></script>
 		<noscript>
-			<link rel="stylesheet" href="css/skel-noscript.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-desktop.css" />
+			<link rel="stylesheet" href="skel-noscript.css" />
+			<link rel="stylesheet" href="style.css" />
+			<link rel="stylesheet" href="style-desktop.css" />
 		</noscript>
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
@@ -40,7 +40,7 @@
 				<article class="container" id="top">
 					<div class="row">
 						<div class="4u">
-							<span class="me image image-full"><img src="images/me.jpg" alt="" /></span>
+							<span class="me image image-full"><img src="http://lh3.googleusercontent.com/--xZVCDwwEsE/AAAAAAAAAAI/AAAAAAAAAAA/Mtwowlf6beA/s512-c/photo.jpg" alt="" /></span>
 						</div>
 						<div class="8u">
 							<header>
