--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Miniport 2.0 by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+ 
 <html>
 	<head>
 		<title>CurriWeb</title>
@@ -15,13 +11,11 @@
 		<script src="config.js"></script>
 		<script src="skel.min.js"></script>
 		<noscript>
-			<link rel="stylesheet" href="skel-noscript.css" />
-			<link rel="stylesheet" href="style.css" />
-			<link rel="stylesheet" href="style-desktop.css" />
+			<link rel="stylesheet" href="skel-noscript.css">
+			<link rel="stylesheet" href="style.css">
+			<link rel="stylesheet" href="style-desktop.css" >
 		</noscript>
-		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
-		<!--[if lte IE 7]><link rel="stylesheet" href="css/ie7.css" /><![endif]-->
+		 
 	</head>
 	<body>
 
@@ -42,9 +36,9 @@
 						<div class="4u">
 							<span class="me image image-full"><img src="http://lh3.googleusercontent.com/--xZVCDwwEsE/AAAAAAAAAAI/AAAAAAAAAAA/Mtwowlf6beA/s512-c/photo.jpg" alt="" /></span>
 						</div>
-						<div class="8u">
+						<div class="8u" style="line-height: 55px;">
 							<header>
-								<h1>Hola. soy <strong>Ramón Núñez del Arco</strong>.</h1>
+								<h1>Hola. soy <strong>Ramón <br>Núñez del Arco</strong>.</h1>
 							</header>
 							<p>Y este es un pequeño <strong>portafolio</strong>, de lo que realizo, este es una muestra  </p>
 							<a href="#work" class="button button-big">Leer más sobre lo que hago</a>
