--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" />
-		<script src="http://html5up.net/assets/js/jquery-1.9.1.js"></script>
+		<script src="jquery-1.9.1.js"></script>
 		<script src="config.js"></script>
 		<script src="skel.min.js"></script>
 		<noscript>
